fix: welcome image on tablet

--- a/src/components/welcome/WelcomeSection.module.scss
+++ b/src/components/welcome/WelcomeSection.module.scss
@@ -18,7 +18,7 @@
     width: 100%;
   }
   @media (max-width: 1240px) {
-    background-size: 50% auto;
+    background-size: 40% auto;
     background-position: right 20px center;
   }
 
@@ -38,7 +38,7 @@
 
   @media (max-width: 420px) {
     margin: 0 auto 72px auto;
-    background-size: auto 40%;
+    background-size: auto 50%;
     padding-top: 14.35rem;
   }
 }
